test_data/blt-format/should-pass/eleven-candidates.blt
2 1
1 9 11 8 1 2 0
1 1 2 5 9 0
1 10 0
1 5 8 2 4 0
0
"Amy"
"Bob"
"Chuck"
"Diane"
"Ewan"
"Fitzpatrick"
"Geraldine"
"Henry"
"Ian"
"Johann"
"Kaptein"
"Gardening Club Election"
