test_data/blt-format/should-fail/candidate-not-existing.blt
4 2
-2
1 4 1 3 2 0
1 2 4 1 3 0
1 1 5 4 2 3 0
1 1 2 4 3 0
1 1 4 3 0
1 3 2 4 1 0
1 3 4 1 2 0
1 3 4 1 2 0
1 4 3 2 0
1 2 3 4 1 0
0
"Amy"
"Bob"
"Chuck"
"Diane"
"Gardening Club Election"
